solve design issue after testing

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+<body style="overflow: hidden;">
   <!-- <div id="loader-wrapper">
     <div class='loader'>
       <div class='loader--dot'></div>
