live new issue resolved

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body style="overflow: hidden;">
+<body>
   <!-- <div id="loader-wrapper">
     <div class='loader'>
       <div class='loader--dot'></div>
