--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  
+  <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+  <!-- <script src="https://example.com/example-framework.js" crossorigin="anonymous"></script> -->
   
 <!-- <script src="./assets/js/custom.js"></script> -->
 
